--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@arcjet/node": "^1.0.0-beta.2",
+    "@upstash/workflow": "^0.2.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
     "cookie-parser": "~1.4.4",
